<resources>
    <string name="app_name">CrossedPaths</string>
    <string name="concerned">Concerned</string>
    <string name="confirmed">Confirmed</string>
    <string name="clear_history">Clear\n History</string>
    <string name="send_data">Send\n Data</string>
    <string name="welcome_to_6_feet">CrossedPaths @</string>
    <string name="remove_upddates">Remove Updates</string>
    <string name="updates_location">Updates Location</string>
    <string name="check_database">Check\n Database</string>
    <string name="contactUs">Contact\n Us</string>
    <string name="emoji">&#10067;\n</string>
    <string name="login">Enter</string>
    <string name="info">  \nCrossedPaths is an app platform for secure and anonymous location overlap sharing by interested groups.
        If you are interested in setting up your own group, please use envelope icon on the main screen to contact us.\n</string>
    <string name="info_2">CHECK DATABASE shows you the location overlaps you have with other group members in the location and
        time duration setup by your group. It also shows you a short message/explanation from the group\'s administrator. \n</string>
    <string name="info_3">Once you are satisfied with CrossedPaths\'s data privacy and would like to see it adopted to benefit
        private or public affairs, please share with a friend or government official.</string>
    <string name="privacy">Data Privacy Explanation</string>
    <string name="info2">Data privacy is a natural concern for location sharing apps.  CrossedPaths prioritizes data privacy
        employing multiple strategies:\n\n1. All data is stored locally on your phone. No one, not even other apps on your phone,
        can access it. Sharing data with any group administrator is voluntary.  It is your responsibility to read the privacy
        policy of that group which is provided everytime when you send data.\n\n2. You have complete control over when to collect
        data. Data is automatically deleted after a week. You can delete all data at any time.\n\n3. The digital signature of your
        location history instead of your actual location history is stored locally on your phone. These signatures cannot be traced
        back to origin location and time and can only be compared to on another to check if they match.\n\n4. Decentralized model
        lets your phone download the database and compare on the phone. No one else knows your overlap results.\n\n5. Only digital
        signatures of timestamped locations that fit the group adminstrator\'s description are sent to that administrator.  We
        require the administrator clearly specify the specific locations and times that they collect in their privacy policy.
        Through programming, we implement these exact descriptions\n\n6. If you still have reservations on data privacy, a path
        you can take is to start updating location only when you anticipate meeting group members that do not live with you,
        such as going to work or out shopping. At other times, you can turn off the location updates.\n\n7. You are not allowed
        to share your digital signatures collected following one group\'s description to another group, so you will not
        accidentally share data to the wrong group.\n\n8. In rare occasions, we or a third party working with us may ask you
        to voluntarily share all your digital signatures in the past 7 days.  More privacy protocols will be communicated to
        you at that time. A password will be provided to enable you to share those infomration if you choose. \n</string>
    <string name="info2_2">Once satisfied with its data privacy, please share CrossedPaths with friends. If you think such app
        can benefit public affairs in Michigan, please email Governor Whitmer by pressing the icon below.</string>
    <string name="policyTitle">Privacy Policy\n</string>
    <string name="downloadOthers">You selected other... Press to update groups.</string>
    <string name="sendPassword">Warning: You are sending digital tokens of your location history to CrossedPaths.  We discourage this choice and use password protection to prevent accidental sending.  If you insist on sending digital token to CrossedPaths, please contact us first to get the password.</string>
    <string name="groupPassword">Your selected group is passoword protected, please enter correct password to join.</string>
</resources>