<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center">

        <Button
            android:id="@+id/clearHistroy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="clearHistroy"
            android:text="@string/clear_history"
            android:textColor="#0088FF" />

        <Space
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:textAlignment= "center"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/check"
                android:layout_marginTop="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/check_database"
                android:textColor="#0088FF" />

            <ProgressBar
                android:id="@+id/progress1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:visibility="invisible"/>

        </RelativeLayout>

        <Space
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/sendData"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="sendData"
            android:text="@string/send_data"
            android:textColor="#0088FF" />

        <Space
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_weight="4" />

        <Button
            android:id="@+id/info"
            android:layout_width="30sp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="displayInfo"
            android:text="ℹ️"
            android:layout_marginTop="6sp"
            android:textSize="20sp"/>

        <Space
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/contactUs"
            android:layout_width="30sp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="✉"
            android:textSize="30sp"
            android:onClick="contactUs"
            android:layout_marginTop="6sp"
            android:layout_marginEnd="16sp"
            android:textColor="#0088FF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinnerBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/titleBar"
        android:layout_marginTop="16dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_6_feet"
            android:textColor="#000000"
            android:textSize="24sp" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:spinnerMode="dialog"></Spinner>

            <ProgressBar
                android:id="@+id/progressLoadGroups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:visibility="invisible"/>

        </RelativeLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinnerBar"
        app:layout_constraintBottom_toTopOf="@id/update"
        android:orientation="vertical">

        <TextView
            android:id="@+id/passwordExplain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:visibility="invisible">
        </TextView>

        <LinearLayout
            android:id="@+id/passwordBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id = "@+id/editTextGroup"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:hint = "Enter password"
                android:inputType = "textPassword"
                android:visibility="invisible"/>

            <Button
                android:id = "@+id/enterPassword"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/login"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@color/DowGreen"
        android:text="@string/updates_location"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/removeUpdates" />

    <Button
        android:id="@+id/removeUpdates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@color/DowGold"
        android:text="@string/remove_upddates"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/spinnerBar"
        app:layout_constraintBottom_toTopOf="@id/update"
        android:id="@+id/scroll_id"
        android:layout_width="match_parent"
        android:fadeScrollbars="false"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.4"
        android:visibility="invisible">

        <TextView
            android:id="@+id/alertTextManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:clickable="true"
            android:scrollbars="vertical"
            android:onClick="dismissAlert"
            android:visibility="invisible" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>