<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0088FF">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12sp"
        android:layout_marginTop="18sp"
        android:text="@string/privacy"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ScrollView
            android:id="@+id/scroll_id"
            android:layout_width="match_parent"
            android:fadeScrollbars="false"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="12sp"
                android:background="#00A9FF"
                android:clickable="true"
                android:onClick="dismissInfo2"
                android:scrollbars="vertical"
                android:text="@string/info2"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </ScrollView>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12sp"
        android:layout_marginBottom="6sp"
        android:text="@string/info2_2"
        android:textColor="#FFEB3B"
        android:textColorHighlight="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="emailGovernor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_email_24" />

</androidx.constraintlayout.widget.ConstraintLayout>